<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_diary_application"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="32dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ideas"
        tools:ignore="ImageContrastCheck" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="32dp">

        <EditText
            android:id="@+id/pinEditText1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:textSize="24sp"
            tools:ignore="LabelFor,SpeakableTextPresentCheck"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/pinEditText2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:textSize="24sp"
            tools:ignore="LabelFor,SpeakableTextPresentCheck"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/pinEditText3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:textSize="24sp"
            tools:ignore="LabelFor,SpeakableTextPresentCheck"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/pinEditText4"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textSize="24sp"
            tools:ignore="LabelFor,SpeakableTextPresentCheck" />
    </LinearLayout>

    <Button
        android:id="@+id/loginSignupButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/lightBlue"
        android:textColor="@color/text"
        android:text="@string/sign_up" />
</LinearLayout>
